<resources>
    <string name="app_name">Lofty Library</string>

    <!-- Main Activity Menu Icons -->
    <string name="txtNovelsIcon">Novels</string>
    <string name="txtMangasIcon">Mangas</string>
    <string name="txtCatalogIcon">Catálogo</string>
    <string name="txtLibraryIcon">Biblioteca</string>
    <string name="txtConfigIcon">Configurações</string>

    <!-- Home Posts -->
    <string name="txtWorkTitle">Work Title</string>

    <!-- Library -->
    <string name="txtLibraryEmpty">Você ainda não adicionou nenhuma obra!</string>

    <!-- Catalogo -->
    <string name="txtSearchWork">Informe o nome da obra</string>
    <string name="txtWorkGenre">Genero</string>
    <string name="txtOrigin">Traduzido por</string>
    <string name="txtDescriptionCover">Capa da obra</string>

    <!-- indice -->
    <string name="txtSynopsis">Sinopse</string>
    <string name="txtChapterList">Capítulos</string>
    <string name="txtAboutWork">Sobre</string>
    <string name="txtWorkType">Tipo</string>

    <!-- Manga Content -->
    <string name="txtDescriptionPage">Pagina de um manga</string>
    <string name="txtChapterTitle">Chapter Title</string>
    <string name="txtRecentLibrary">Lido Recentemente</string>
    <string name="txtFollowingLibrary">Lendo</string>
    <string name="txtLastChapterLibrary">Ultimo Capitulo Lido</string>
    <string name="txtCoverDescription">Cover</string>

    <!-- Splash Screen -->
    <string name="txtDateChapter">Date</string>
    <string name="txtTotal">Total:</string>

    <!-- Settings/Login -->
    <string name="txtLogin">Login</string>
    <string name="txtRegisterAccount">Cadastro</string>
    <string name="txtName">Digite seu nome</string>
    <string name="txtEmail">Digite seu E-mail</string>
    <string name="txtPassword">Digite sua senha</string>
    <string name="txtCreateAccount">Não possui conta? Criar Conta!</string>
    <string name="btnRegister">Cadastrar</string>
    <string name="btnImage">Foto</string>
    <string name="txtLogout">Sair</string>
    <string name="imagePosts">Capa</string>
    <string name="chapterDescription">Chapter Title</string>

    <!-- Info Frame -->
    <string name="txtInfoTitle">Informações</string>
    <string name="txtZoom">Zoom</string>
    <string name="txtApplyZoom">Aplicar: </string>
    <string name="txtApplyZoomDescription">Para aplicar o zoom pressione rapidamente uma vez a tela!</string>
    <string name="txtRemoveZoom">Remover: </string>
    <string name="txtRemoveZoomDescription">Para remover o zoom mantenha pressionado sobre a tela!</string>
    <string name="txtReportChapter">Reportar Capitulo</string>

</resources>