<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/info_panel"
    android:padding="15dp"
    tools:context=".fragments.InfoFragment">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/chapter_border"
        android:gravity="center"
        android:text="@string/txtInfoTitle"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtApplyZoom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/txtZoom"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/txtApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/txtApplyZoom"
        android:textColor="@color/colorAccent"
        android:textColorHighlight="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApplyZoom" />

    <TextView
        android:id="@+id/txtApplyDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="12dp"
        android:text="@string/txtApplyZoomDescription"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtApply"
        app:layout_constraintTop_toTopOf="@+id/txtApply" />

    <TextView
        android:id="@+id/txtRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="75dp"
        android:text="@string/txtRemoveZoom"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApply" />

    <TextView
        android:id="@+id/txtRemoveDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txtRemoveZoomDescription"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/txtApplyDescription"
        app:layout_constraintStart_toStartOf="@+id/txtApplyDescription"
        app:layout_constraintTop_toTopOf="@+id/txtRemove" />

    <TextView
        android:id="@+id/txtReportChapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/colored_border"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/txtReportChapter"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRemoveDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>