<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llWork"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp">

    <androidx.cardview.widget.CardView
        style="@style/CardView.Dark"
        android:layout_width="100dp"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/workCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/txtCoverDescription"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/kog" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtWorkTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txtWorkTitle"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txtTotal" />

            <TextView
                android:id="@+id/txtCurrent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txtTotal" />

            <TextView
                android:id="@+id/txtTotal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txtTotal" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtLastChapter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/txtLastChapterLibrary"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>