<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llWork"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/colored_border"
    android:padding="3dp">

    <androidx.cardview.widget.CardView
        style="@style/CardView.Dark"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/workCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="TODO"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/kog" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDateChapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center|clip_vertical"
            android:text="@string/txtDateChapter"
            android:textAlignment="viewEnd"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/txtPostTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/txtWorkTitle"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtGenre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/txtChapterTitle"
            android:textAlignment="center"
            android:textColor="@color/txtColor"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>