<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.settings.SettingsActivity">

    <TextView
        android:id="@+id/txtLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/txtLogout"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:drawableLeftCompat="@drawable/ic_logout" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnCloseAds"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/ic_close_ad" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adsPainel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:adSize="BANNER"
            app:adUnitId="ca-app-pub-9527989571520943/7257308806">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgMenuColor"
        android:baselineAligned="false"
        android:foregroundGravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgMangasIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/txtNovelsIcon"
                app:srcCompat="@drawable/ic_mangas" />

            <TextView
                android:id="@+id/txtMangasIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtMangasIcon"
                android:textAlignment="center"
                android:textColor="@color/txtMenuColor"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgNovelsIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/txtNovelsIcon"
                app:srcCompat="@drawable/ic_novels" />

            <TextView
                android:id="@+id/txtNovelsIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtNovelsIcon"
                android:textAlignment="center"
                android:textColor="@color/txtMenuColor"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgCatalogIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/txtNovelsIcon"
                app:srcCompat="@drawable/ic_catalog" />

            <TextView
                android:id="@+id/txtCatalogIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtCatalogIcon"
                android:textAlignment="center"
                android:textColor="@color/txtMenuColor"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLibraryIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/txtNovelsIcon"
                app:srcCompat="@drawable/ic_library" />

            <TextView
                android:id="@+id/txtLibraryIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtLibraryIcon"
                android:textAlignment="center"
                android:textColor="@color/txtMenuColor"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgSettingsIcon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/txtNovelsIcon"
                app:srcCompat="@drawable/ic_settings" />

            <TextView
                android:id="@+id/txtSettingsIcon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtConfigIcon"
                android:textAlignment="center"
                android:textColor="@color/txtMenuColor"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>